@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-12-14"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20091214
-#define RUBY_PATCHLEVEL 234
+#define RUBY_PATCHLEVEL 235
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
