@@ -1,3 +1,8 @@
+Mon Dec 14 12:35:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (proc_invoke): unbound block created by define_method
+	  cannot call super.  [ruby-core:26984]
+
 Mon Dec 14 12:06:39 2009  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Do not
